@@ -9,6 +9,7 @@ next:
          - improve check_service linux performance
          - add reload support for systemd service
          - add metrics to check_os_version
+         - add metrics to check_snclient_version
          - fix using arguments in aliased checks (#69)
          - fix metrics order when using check_nsc_web
          - fix wrong path in logrotation on linux
